--- a/AI 实战营第 2 期/homework4_mmseg_watermelon.ipynb
+++ b/AI 实战营第 2 期/homework4_mmseg_watermelon.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "## 下载整理好之后的数据集"
+    "## 下载Labelme数据集"
    ]
   },
   {
@@ -51,26 +51,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "2636c8ab-cb11-4ff0-8aa9-2f945c201551",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rm -rf data/Watermelon87_Semantic_Seg_Mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e111bb9d-5eb3-4f9b-8b3d-6fa4781616bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!unzip data/Watermelon87_Semantic_Seg_Mask.zip -d data/"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "id": "61b81da7-806b-4e83-b966-7866ba03d59c",
    "metadata": {},
@@ -99,195 +79,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "82c54bde-3e3b-4f80-ad73-209ac4d29e6b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Archive:  data/Watermelon87_Semantic_Seg_Labelme.zip\n",
-      "   creating: data/Watermelon87_Semantic_Seg_Labelme/\n",
-      "   creating: data/Watermelon87_Semantic_Seg_Labelme/images/\n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/1471253631_2.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/68200_main-1.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/suika011.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/R.jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/0778_02.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/piece-watermelon-isolated-white-background-top-view-95945299.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/watermelon-slices.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/watermelon-medium.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/da23-e4580.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/R (8).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/L007-05_5.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/foods083_img01.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/01bd15599c606aa801201794e1fa30.jpg@1280w_1l_2o_100sh.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/21746.1.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/5b3c8018N634d43bd.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/04_35-2.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/OIP (8).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/thum-20180809094803.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/c38e1f595c46d502c75bda7ec9bf6078.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/skmrk03.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/7c75f4c6f3bdd9d61d8782ddff1ff6ac.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/045_sozai_l.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/la_wm_img01.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/maxresdefault.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/dun-soi-hat-dua-hau-lay-nuoc-uong-ban-se-bat-ngo-vi-ket-qua-nuochatduah--u1-1493799084-width500height313.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/R (9).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/20170613134012_430390.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/ac330c7605098e36de5507d857d0b55c.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/OIP.jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/OIP (9).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/alkompis_QGYeyHjwPY-scaled.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/adpDSC_5275-750x499.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/vDMIiCPqS1EC.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/360_F_85084369_iab0VH1ohx2lHtM3OfCncfE9I7VPpl0N.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/OIP (14).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/Watermelon.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/OIP (7).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/test.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/R (1).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/24a3a0f8a11ae29f8ccca35c822ac0e2991b4773.png  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/2401-food-tip-image-MAIN.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/R (3).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/R (13).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/202007220195_top_img_A.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/69735779_m-5b756b48997fa.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/OIP (5).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/istockphoto-849574338-170667a.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/OIP (1).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/img56610866.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/dua-hau-1.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/OIP (12).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/unnamed.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/huyet-ap-cao-thap-nen-an-gi-kieng-gi-tot-on-dinh-2.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/17897490_93d9666602_z.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/pureform-citrulline.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/R (15).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/8fe7f149146b6866.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/R (5).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/depositphotos_204189678-stock-photo-slice-watermelon-white-background.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/e52m_8686.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/uportcocoloni_16696_0.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/OIP (10).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/s0569_001_c01.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/ed2de27518d0526380c9bcc9f9fb78333565cce8.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/OIP (3).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/R (2).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/IMG_6865-1024x683.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/31cc9b997d1e3a8ed5b6a3cbf5efd86d.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/pfauwbexemva1nvwobqs.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/OIP (4).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/11-loai-trai-cay-dinh-duong-nen-an-hang-ngay-dua-hau.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/1510702494080_melon_NWS_block-low.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/OIP (15).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/Manfaat-buah-semangka.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/R (10).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/o0833068314488481500.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/shutterstock_457769608.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/denn-ke-11-7.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/R (14).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/468D11D9CB53158C55CF126CFE3D49C0A070758A_size321_w400_h400.png  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/R (4).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/OIP (2).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/OIP (11).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/OIP (13).jpeg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/img_de56fb30d23e2c761302ba61198a4be4233656.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/8-thuc-pham-chong-cam-cum-1459496975020.jpg  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/images/img4f375505zik9zj.jpeg  \n",
-      "   creating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/\n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/20170613134012_430390.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/la_wm_img01.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/R (9).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/denn-ke-11-7.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/shutterstock_457769608.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/pfauwbexemva1nvwobqs.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/OIP.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/watermelon-medium.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/IMG_6865-1024x683.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/69735779_m-5b756b48997fa.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/uportcocoloni_16696_0.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/piece-watermelon-isolated-white-background-top-view-95945299.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/depositphotos_204189678-stock-photo-slice-watermelon-white-background.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/unnamed.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/OIP (9).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/e52m_8686.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/maxresdefault.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/da23-e4580.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/31cc9b997d1e3a8ed5b6a3cbf5efd86d.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/1471253631_2.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/thum-20180809094803.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/foods083_img01.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/0778_02.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/R.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/5b3c8018N634d43bd.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/istockphoto-849574338-170667a.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/R (8).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/vDMIiCPqS1EC.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/o0833068314488481500.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/test.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/alkompis_QGYeyHjwPY-scaled.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/OIP (8).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/04_35-2.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/1510702494080_melon_NWS_block-low.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/c38e1f595c46d502c75bda7ec9bf6078.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/ed2de27518d0526380c9bcc9f9fb78333565cce8.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/ac330c7605098e36de5507d857d0b55c.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/8-thuc-pham-chong-cam-cum-1459496975020.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/Watermelon.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/R (2).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/01bd15599c606aa801201794e1fa30.jpg@1280w_1l_2o_100sh.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/img_de56fb30d23e2c761302ba61198a4be4233656.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/24a3a0f8a11ae29f8ccca35c822ac0e2991b4773.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/OIP (4).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/8fe7f149146b6866.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/skmrk03.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/OIP (15).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/21746.1.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/R (10).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/s0569_001_c01.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/468D11D9CB53158C55CF126CFE3D49C0A070758A_size321_w400_h400.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/adpDSC_5275-750x499.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/R (14).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/360_F_85084369_iab0VH1ohx2lHtM3OfCncfE9I7VPpl0N.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/R (4).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/OIP (2).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/2401-food-tip-image-MAIN.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/11-loai-trai-cay-dinh-duong-nen-an-hang-ngay-dua-hau.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/68200_main-1.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/suika011.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/OIP (11).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/OIP (13).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/huyet-ap-cao-thap-nen-an-gi-kieng-gi-tot-on-dinh-2.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/img4f375505zik9zj.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/OIP (14).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/202007220195_top_img_A.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/17897490_93d9666602_z.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/img56610866.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/OIP (7).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/R (1).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/L007-05_5.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/7c75f4c6f3bdd9d61d8782ddff1ff6ac.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/R (3).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/R (13).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/Manfaat-buah-semangka.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/OIP (5).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/pureform-citrulline.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/dun-soi-hat-dua-hau-lay-nuoc-uong-ban-se-bat-ngo-vi-ket-qua-nuochatduah--u1-1493799084-width500height313.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/OIP (1).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/045_sozai_l.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/OIP (12).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/R (15).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/dua-hau-1.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/R (5).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/watermelon-slices.json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/OIP (10).json  \n",
-      "  inflating: data/Watermelon87_Semantic_Seg_Labelme/labelme_jsons/OIP (3).json  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!unzip data/Watermelon87_Semantic_Seg_Labelme.zip -d data/"
    ]
@@ -336,7 +131,7 @@
    "id": "c6d4a61f-264f-456e-bfb5-c2c1a6900f85",
    "metadata": {},
    "source": [
-    "## 转化数据集"
+    "## 从labelme格式生成训练数据集"
    ]
   },
   {
@@ -706,6 +501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 验证数据集没有问题\n",
     "!touch watermelon_dataset_helper.py"
    ]
   },
